# mikado-kata-cpp

./: .gitignore  CMakeLists.txt  KataCpp.sln  README.md
MasterCrupt/: Application.h  MasterCrupt.cpp  MasterCrupt.h  MasterCrupt.vcxproj  UI.h  packages.config  stdafx.h
MasterCruptTest/: AcceptanceTest.cpp  MasterCruptTest.vcxproj  packages.config
StrangerEons/: StrangerEons.cpp  StrangerEons.h  StrangerEons.vcxproj
StrangerEonsTest/: AcceptanceTest.cpp  StrangerEonsTest.vcxproj
UserInterface/: UserInterface.cpp  UserInterface.h  UserInterface.vcxproj
src/: Application.cpp  Application.h  CMakeLists.txt  Leeter.cpp  Leeter.h  MasterCrupt.cpp  MasterCrupt.h  UI.cpp  UI.h  dllmain.cpp  stdafx.h
tst/: AcceptanceTest.cpp  CMakeLists.txt
